# anbima_scraper

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  curva_juros_fechamento.py  debentures-merc-secundario.py  debentures_mercado_secundario.py  idka.py  ima-carteiras.py  ima-quadro-resumo.py  ima_carteiras.py  ima_quadro_resumo.py  indicadores_anbima.py  pyproject.toml  requirements.txt  saida.csv  titulos-publicos-merc-secundario.py  titulos_publicos_mercado_secundario.py  utils.py
bases/: _idka_base.csv  curva_juros_fechamento.csv  idka_base.csv  ima_quadro_resumo_base.csv  indicadores_anbima.csv
examples/: basic_usage.py
notebooks/: indicadores_anbima.ipynb
src/anbima_scraper/: __init__.py  cli.py
src/anbima_scraper/config/: __init__.py  settings.py
src/anbima_scraper/core/: __init__.py  anbima_scraper.py  scraper.py
src/anbima_scraper/scrapers/: __init__.py  curves.py  debentures.py  idka.py  ima.py  indicators.py
src/anbima_scraper/utils/: __init__.py  calendar.py  data_processor.py  http_client.py
tests/: __init__.py  test_indicators.py
